src/Home/Project/Project.css
.mobile-horizontal-line{
    display: none;
}
.title-projects{
    font-size:3rem;
    height: 200px;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}
/* .projects{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 550px;
    width: 450px;
    padding: 2em;
    margin: auto;
    margin-top: 50px;
    margin-bottom: 50px;
} */
.mobile-projects{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 500px;
    width: 100%;
    padding-top: 2em;
    padding-bottom: 2em;
    border-radius: 10px;
    margin: auto;
    margin-top: 50px;
    margin-bottom: 50px;
}
.ml-50{
    margin-left: 50px;
}
.mr-50{
    margin-right: 50px;
}
.project-image-container{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 10rem;
    height: 10rem;
    border: 2px solid white;
    border-radius: 100%;
}
.project-image{
    width: 8rem;
    height: 8rem;
    font-size: 5rem;
    display: flex;
    align-items: center;
    justify-content: center; 
}
.project-title{
    padding-top: 1em;
    text-align: left;
    font-size: 1.5rem;
    font-weight: bold;
    width: fit-content;
}

.project-buttons-container{
    padding-top: 1em;
    display: flex;
    align-items: center;
    justify-content: center;
}
.project-buttons{
    color: white;
    background: none;
    text-decoration: none;
    padding: 0.1em 0.4em;
    border: 1px solid white;
    height: fit-content;
    width: fit-content;
    border-radius: 10px;
    margin: 0.5rem;
    font-size: 1.5rem;
    cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: center;
    transition: all 0.3s;
    user-select: none; /* supported by Chrome and Opera */
    -webkit-user-select: none; /* Safari */
    -moz-user-select: none; /* Firefox */
    -ms-user-select: none; /* Internet Explorer/Edge */
}
.project-buttons:hover{
    opacity: 60%;
}


@media only screen and (max-width: 913px) { 
    .projects{
        width: 90%;
        margin: auto;
        height: fit-content;
        box-shadow: none;
        background-color: #212529;
    }
    .project-text-container{
        width: 100%;
        border-radius: 1vh;
    }
    .project-projects{
        width: 90%;
    }
    .project-text-container{
        width: 80%;
    }
    .mobile-horizontal-line{
        display: block;
        width: 90%;
        background-color:white;
        height: 0.2vh;
    }
}

